Update plugin to copy python parser script to temp directory.